# olas-operate-app

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .npmrc  CLAUDE.md  CONTRIBUTING.md  FRONTEND_LOGGING_IMPLEMENTATION.md  Makefile  README.md  api.md  build-linux.js  build-win.js  build.js  build.tester.js  build_pearl.sh  download_binaries.sh  package.json  pearl.spec  pearl_arm64.spec  plan.md  pyproject.toml  run_operate.sh  test_backend.py
.claude/: settings.json
.claude/commands/: analyze-logs.md  audit-agent.md  audit-autorun.md  explore-frontend-codebase.md  pre-implementation-check.md  review-implementation.md  tech-plan.md  update-feature-docs.md
.github/: CODEOWNERS  copilot-instructions.md
.github/rulesets/: restrict-release-tag-creation.json
.github/workflows/: backend.yml  binary_testing.yml  bump-mw-pin.yml  bump-release-version.yml  calculate-and-update-version.yml  check-release-not-published.yml  ci.yml  codeql.yml  create-feature-release.yml  create-release-tag.yml  create-testing-release.yml  e2e.yml  ensure-draft-release.yml  feature_release.yml  frontend-tests.yml  frontend.yml  integration.yml  manual_release_dev.yml  manual_release_win_dev.yml  merge-latest-mac-yml.yml  production-release.yml  publish-release.yml  release-to-production.yml  release.yml  release_dev.yml  release_linux.yml  release_mac.yml  release_win.yml  release_win_dev.yml  snyk-security.yml  yarn-lock-check.yml
.husky/: pre-commit
.supply-chain/: audit-allowlist.json  install-hooks.allowlist  license-allowlist.json
checklist-for-agent-integration/: 3rd-party-checklist.md  agent-performance-checklist.md  complete-checklist.md  frontend-checklist.md  fund-status.md  integration-layers.md  middleware-checklist.md  self-serve-qa.md
docs/: FRONTEND_LOGGING_QUICK_REF.md  agent-integration-checklist.md  architecture.md  automatic-updates.md  change_password.md  create_safe_manually.md  frontend-logging.md  pearl_account_recovery.md  recover_using_backup_wallet.md  withdraw_manually.md  withdraw_manually_terminated.md
docs/dev/: agent-integration-guide.md  macos-setup.md  rpcs.md  test-findings.md  ubuntu-setup.md  windows-setup.md
docs/explorations/: connect-agent-plan.md
docs/features/: account.md  achievements.md  agent-settings.md  autorun.md  balance.md  bridging.md  deployability-and-lifecycle.md  dynamic-polling.md  electron-api.md  feature-flags.md  funding-and-refill.md  multi-instance-agents.md  on-ramping.md  services.md  staking-and-rewards.md  staking-data-architecture.md  support-and-logs.md  transaction-history.md  wallet.md
electron/: .eslintrc.json  afterPack.js  autoUpdater.js  entitlements.mac.plist  install.js  jsconfig.json  logger.js  main.js  package.json  preload-splash.js  preload.js  processes.js  standalone-script.js  store.js  update.js  utils.js  windows.js
electron/components/: PearlTray.js
electron/constants/: index.js  size.js
electron/features/: logs.js
frontend/: .eslintrc.json  jest.config.ts  jest.setup.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
operate/: cli.py  constants.py  operate_types.py  pearl.py  tendermint.py  types.py
scripts/: audit-install-hooks.mjs  audit.mjs  check-deps-pinned.mjs  extract-context.sh  license-check.lib.mjs  license-check.mjs  license-check.test.mjs  merge-latest-mac-yml.sh  pearl_stats.py  release.sh  setup_wallet.py  sign_pyinstaller_macos.sh  test_e2e.py  test_staking_e2e.py
templates/: langchain.yaml  memeooorr.yaml  optimus.yaml  trader.yaml
tests/: conftest.py  test_account_topup.py  test_backend.py  test_trader_versions.py
(+1593 files in other folders)
