[project]
name = "olas-operate-app"
version = "1.6.12-rc37"
description = ""
authors = [
    { name = "David Vilela", email = "dvilelaf@gmail.com" },
    { name = "Viraj Patel", email = "vptl185@gmail.com" },
]
requires-python = ">=3.14,<3.15"
readme = "README.md"
dependencies = [
    "open-autonomy[cli, docker]==0.21.21",
    "open-aea-ledger-cosmos==2.2.5",
    "open-aea-ledger-ethereum==2.2.5",
    "open-aea-cli-ipfs==2.2.5",
    "olas-operate-middleware==0.15.25",
]

[dependency-groups]
dev = ["pyinstaller==6.20.0"]

[tool.uv]
package = false
# Force uv to use the `actions/setup-python` (or system) CPython
# rather than its own python-build-standalone download, so the
# interpreter bundled into the `pearl_*` / `tendermint` PyInstaller
# release artifacts stays under `setup-python@v6`'s control (same
# provenance we had under Poetry). Drop this only if we want to
# opt every release into uv-managed interpreters.
python-preference = "only-system"
